# PARTProf

./: .gitignore  README.md  rtcsa-tables.txt
.devcontainer/: Dockerfile  devcontainer.json
embedded/: CMakeLists.txt  README.md  build.sh
embedded/apps/cacheapp/: cachekiller.c  cachesaver.c  cachestress.c
embedded/apps/forever/: CMakeLists.txt  forever.c
embedded/apps/sampler/: CMakeLists.txt
embedded/apps/sampler/include/: hidapi.h  list.h  readfile.h  sensor.h  sensor_iio.h  sensor_ina226.h  sensor_ina231.h
embedded/apps/sampler/include/private/: hwmon_private.h  ina231_private.h  smartpower_private.h
embedded/apps/sampler/src/: hid.c  periodic.c  sample_sensors.c  sensor_file.c  sensor_ina226.c  sensor_ina231.c  sensor_smartpower.c
embedded/cacheapp/: CMakeLists.txt  cache.h
embedded/confdir/: base.sh  force-hi-freqs.bash  force-policy.bash  freqs-only-in-list.bash  freqs-only-in-list.sh  howmany_1.bash  pmc.sh  policies-only-in-list.sh  policy-only-in-list.bash  power.sh  tasks-validation.sh  tasks.sh  time.sh  timepower.sh
embedded/confdir/base/: base.sh  pmc.sh  power.sh  time.sh  timeperfpower.sh  timepower.sh
embedded/confdir/howmany_tasks/: 2.sh  3.sh  4.sh  5.bash  6.bash  7.bash  8.bash  generic.sh
embedded/confdir/tasks/: complete.sh  simple-validation.sh  simple.sh  single.sh  stress-ng-stressors.md
embedded/experiment-scripts/: cpufreq.sh  email.sh  fakedata.sh  fix-trip-points.sh  pmc-load-events.sh  run-all.sh  run-multi.sh  run-pmc.sh  run-steady.sh  run-validation.sh  run.sh
embedded/scripts/: run.sh  sweep.sh
host/: README.md  base.makefile  build.sh  gen_deps.sh  make_rules.sh  post-build.sh  raw_odroid.cmap  raw_raspberry.cmap  raw_to_csv.py  table-data.txt
host/cmaps/: odroid_xu4.cmap  raw_odroid.cmap
host/old/: base.makefile  gen_deps.sh  post-build.sh
host/pyscripts/: TODO  collapse.py  collect_samples.py  collect_stats.py  describe_all_errors.py  errors.py  fit.py  perf_csv_to_csv.py  perf_samples_to_table.py  plot_time_prediction.py  plotstuff.py  power_samples_to_table.py  power_tables_collect.py  prepare_tables.py  raw_csv_to_stats.py  raw_to_csv.py  simtable.py  simulate.py  thermal_model_fit.py
install/: README.md  install-dep.sh  install.sh  odroid-kernel-update.bash
results/raspberry/: outdata.csv
results/zcu102/: outdata.csv
tables-old/odroid/: simtable.csv
tables-old/raspberry/: simtable.csv  table.csv
tables-old/zcu102/: simtable.csv
tables/odroid/: collapsed.csv  simtable.csv  simulation.csv  simulation_errors.csv  table.csv
tables/raspberry/: simtable.csv  simulation.csv  simulation_errors.csv  table.csv
tables/zcu102/: simtable.csv  simulation.csv  simulation_errors.csv  table.csv
tools/: README.md  backupsd.sh  imagemanager.sh  sdtools.sh
(+60318 files in other folders)
